# PATROLApp

./: README.md
PATROL/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
PATROL/src/: app.py  settings.py
PATROL/src/database/: db.py  model.py  schema.txt
PATROL/src/router/: crowd.py  ecommerce.py  government.py  notification.py  research.py  user.py
PATROL/src/static/: infections_model.npy  visits_model.npy
PATROL/src/utils/: firebase.py  logger.py  ml.py
PATROL_App/: .gitignore  build.gradle  settings.gradle
PATROL_App/app/: README.md  build.gradle
PATROL_App/app/src/main/: AndroidManifest.xml
PATROL_App/app/src/main/res/drawable/: bg_search_black.xml  border_backgorund.xml  button_background.xml  red_dot.xml
PATROL_App/app/src/main/res/layout/: activity_broadcast_gen_user_display.xml  activity_broadcast_govt_display.xml  activity_crowd_monitoring_landing_page.xml  activity_dev_researcher_landing_page.xml  activity_ecomm_home_page.xml  activity_gen_user_home_page.xml  activity_general_trends.xml  activity_govt_home_page.xml  activity_login.xml  activity_main.xml  activity_maps.xml  activity_monitor_health_status.xml  activity_new_broadcast.xml  activity_profile.xml  activity_registration.xml  activity_survey_results.xml  activity_update_health_status.xml  item_demand.xml  item_text.xml  items_layout.xml  request_items.xml
PATROL_App/app/src/main/res/values/: arrays.xml  (+3 more)
PATROL_App/app/src/main/res/values-night/: themes.xml
PATROL_App/gradle/: libs.versions.toml
PATROL_App/gradle/wrapper/: gradle-wrapper.properties
(+39 files in other folders)
