[tool.poetry]
name = "patrol"
version = "0.1.0"
description = "software architecture"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
blinker = "1.7.0"
cachecontrol = "0.14.0"
cachetools = "5.3.3"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
cryptography = "42.0.5"
firebase-admin = "6.5.0"
flask = "3.0.2"
google-api-core = "2.18.0"
google-api-python-client = "2.124.0"
google-auth = "2.29.0"
google-auth-httplib2 = "0.2.0"
google-cloud-core = "2.4.1"
google-cloud-firestore = "2.15.0"
google-cloud-storage = "2.16.0"
google-crc32c = "1.5.0"
google-resumable-media = "2.7.0"
googleapis-common-protos = "1.63.0"
grpcio = "1.62.1"
grpcio-status = "1.62.1"
httplib2 = "0.22.0"
idna = "3.6"
importlib-metadata = "7.1.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.3"
markupsafe = "2.1.5"
msgpack = "1.0.8"
proto-plus = "1.23.0"
protobuf = "4.25.3"
pyasn1 = "0.6.0"
pyasn1-modules = "0.4.0"
pycparser = "2.21"
pyjwt = "2.8.0"
pyparsing = "3.1.2"
requests = "2.31.0"
rsa = "4.9"
uritemplate = "4.1.1"
urllib3 = "2.2.1"
werkzeug = "3.0.1"
zipp = "3.18.1"
sqlalchemy = "^2.0.29"
pydantic = "^2.7.0"
flask-sqlalchemy = "^3.1.1"
pydantic-settings = "^2.2.1"
firebase = "^4.0.1"
psycopg2-binary = "^2.9.9"
flask-cors = "^4.0.0"
geoalchemy2 = "^0.14.7"
scikit-learn = "^1.4.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
